# DynamicAnalysis

./: .gdb_history  .gitignore  CMakeLists.txt  DynamicAnalysisWin.cpp  DynamicAnalysisWin.vcxproj  README.md  aes_lib  analysis_result_aes_lib_top.csv  crypto_library_types.h  crypto_orchestrator.cpp  extract_evp.py  filter_trace.py  main.cpp  main.py  makefile  print_params.py  pyproject.toml  test_windows.ps1
DynamicA.c95f6ed7/x64/Debug/: DynamicAnalysisWin.exe.recipe  DynamicAnalysisWin.ilk
agent/: agent.js  c_cpp_agent.js  c_cpp_crypto_agent.js
agent/c_cpp/: libgcrypt_agent.js  mbedTLS_agent.js  openssl_agent.js  windows_cng_agent.js
examples/: complextest
frida-core/: frida-core-example.c  frida-core.h
include/: crypto_utils.h  get_key.h  hook_common.h  hook_jni.h  jni_hooks.h  output.h  pch.h
include/common/: dynamic_analysis.h  hook_openssl_state.h  pch.h  reentry_guard.h
include/platform/linux/: elf_analyzer.h  java_crypto_utils.h  log.h  resolver.h
include/platform/windows/: hook_windows.h
scripts/: run_all_dynamic_tests.sh  test_windows.ps1
src/: dynamic_analysis.cpp  init.cpp  log.cpp  main.cpp  resolver.cpp
src/Linux/hooks/: hook_af_alg.cpp  hook_boringssl.cpp  hook_cryptodev.cpp  hook_gnutls.cpp  hook_java_native_crypto.cpp  hook_jni.cpp  hook_libsodium.cpp  hook_mbedtls.cpp  hook_nss.cpp  hook_openssl_core.cpp  hook_openssl_ecc.cpp  hook_openssl_provider.cpp  hook_openssl_state.cpp  hook_openssl_state.h  hook_pycryptodome.cpp  hook_wolfssl.cpp
src/Windows/: windows_hook_dll.cpp
src/Windows/hooks/: hook_openssl_detours.cpp  hook_openssl_state.cpp  hook_openssl_state.h
src/Windows/utils/: crypto_utils.cpp  output.cpp
src/common/: dynamic_analysis.cpp  main.cpp
src/hooks/: af_alg.cpp  cryptodev.cpp  foo_hook.cpp.old  hook_openssl_provider.cpp  java_native_crypto_hooks.cpp  jni_hooks.cpp  openssl_hooks.cpp  openssl_hooks_old.cpp.old
src/platform/linux/hooks/: hook_boringssl.cpp  hook_cryptodev.cpp  hook_gnutls.cpp  hook_jni.cpp  hook_libsodium.cpp  hook_mbedtls.cpp  hook_nss.cpp  hook_openssl_provider.cpp  hook_openssl_state.cpp  linux_hook_af_alg.cpp  linux_hook_java_native_crypto.cpp  linux_hook_openssl_core.cpp  linux_hook_openssl_ecc.cpp  linux_hook_pycryptodome.cpp  linux_hook_wolfssl.cpp
src/platform/linux/utils/: elf_analyzer.cpp  java_crypto_utils.cpp  linux_crypto_utils.cpp  output.cpp
src/platform/windows/hooks/: hook_openssl_detours.cpp  windows_hook_libsodium.cpp  windows_hook_openssl_state.cpp
src/platform/windows/utils/: output.cpp  windows_crypto_utils.cpp
src/utils/: crypto_utils.cpp  elf_analyzer.cpp  get_key.cpp  java_crypto_utils.cpp  output.cpp
test_code/aes/: aes.c  makefile  test.c  test_c
test_code/aes_lib/: main.cpp  makefile
test_code/ecc/: Makefile  ecc.cpp
test_code/ecc_ECIES/: main.cpp
tests/: ecc_ECIES_test.cpp  java_process_detector.cpp
tests/GnuTLS/symmetric/: gnutls_aes_gcm_demo.c
tests/NSS/symmetric/: nss_aes_gcm_demo.c
tests/af_alg/: af_alg_aes_gcm_demo.c
tests/af_alg_test/: aes_gcm_afalg_test.cpp
tests/boringSSL/symmetric/: boringssl_xchacha20_poly1305_demo.cc
tests/cryptodev/ioctl/: cryptodev_aes_cbc_demo.c  cryptodev_rsa_demo.c
tests/libsodium/aead/: chacha20_poly1305_demo.c
tests/openssl/provider/: openssl3_ex2_test.cpp
tests/openssl_test/: demo_target.cpp  ecc_sign_test.cpp
tests/wolfSSL/symmetric/: wolfssl_aes_gcm_demo.c
